mobile design complete

--- a/css/layout.scss
+++ b/css/layout.scss
@@ -35,7 +35,7 @@ section{
         box-shadow: 0 0 10px 0 gray;
 
         img{
-            width: auto;
+            width: 150px;
             height: 35px;
         }
     }
