--- a/css/pages.scss
+++ b/css/pages.scss
@@ -16,12 +16,13 @@
 
         i{
             font-size: large;
+            color: black;
         }
     }
 
     img{
-        width: 50%;
-        height: 70%;
+        width: 150px;
+        height: 35px;
     }
 }
 
@@ -37,7 +38,12 @@
     object-fit: cover;
     object-position: center;
     width: 100%;
-    height: 15%;
+    height: 300px;
+
+    img{
+        width: 100%;
+        height: 100%;
+    }
     
 }
 
