--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ a {
     4-Placeholders
 */
 /****COLORS****/
+/****ANIMATION MENU OPACITY****/
 /****FLEX****/
 /****TEXTE ELLIPSIS****/
 /****BOX SHADOW****/
@@ -456,6 +457,7 @@ footer a i {
   justify-content: center;
   align-items: center;
   position: relative;
+  background-color: white;
 }
 .header__restaurant a {
   height: fit-content;
@@ -496,12 +498,7 @@ footer a i {
   width: 100%;
   border-radius: 2em 2em 0 0;
   background-color: #f6f6f6;
-}
-.menu__restaurant h1 {
-  padding-top: 15px;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
+  padding-bottom: 20px;
 }
 .menu__restaurant h1:not(i) {
   font-size: 21px;
@@ -557,6 +554,36 @@ footer a i {
 }
 .title__underline {
   border-bottom: 4px solid #99E2D0;
+}
+
+.name__restaurant {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding: 10px 0;
+}
+
+.dishe__container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+@media screen and (min-width: 900px) {
+  .img__landing {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -10000;
+    top: 0;
+  }
+  .menu__restaurant {
+    width: 90%;
+    margin: auto;
+    margin-top: 120px;
+    background-color: rgba(246, 246, 246, 0.5647058824);
+    border-radius: 2em;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
