--- a/css/components.scss
+++ b/css/components.scss
@@ -8,6 +8,7 @@
     border: none;
     margin: 10px 0;
     @include boxShadow;
+    cursor: pointer;
     
     &__order{
         position: absolute;
@@ -20,17 +21,10 @@
         background-color: map-get($map: $colors, $key: color-one); 
         @include flexcenter;
     }
-
-    &__link{
-        width: 250px;
-        height: 50px;
-        color: black;
-    }
-
-    
+ 
     i{
         position: absolute;
-        top: 15px;
+        top: 17px;
         bottom: 0;
         left: 20px;
     }
@@ -241,6 +235,7 @@ input:checked ~ .fa-regular {
     writing-mode: unset;
     margin: 10px 0;
     @include boxShadow;
+    background-color: white;
 
     &__description {
         width: 100%;
