--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ a {
   border: none;
   margin: 10px 0;
   box-shadow: 0 3px 10px -2px rgb(50, 60, 55);
+  cursor: pointer;
 }
 .btn__order {
   position: absolute;
@@ -95,14 +96,9 @@ a {
   justify-content: center;
   align-items: center;
 }
-.btn__link {
-  width: 250px;
-  height: 50px;
-  color: black;
-}
 .btn i {
   position: absolute;
-  top: 15px;
+  top: 17px;
   bottom: 0;
   left: 20px;
 }
@@ -294,6 +290,7 @@ input:checked ~ .fas {
   writing-mode: unset;
   margin: 10px 0;
   box-shadow: 0 3px 10px -2px rgb(50, 60, 55);
+  background-color: white;
 }
 .dishe__description {
   width: 100%;
@@ -358,7 +355,7 @@ h1 {
   font-family: "Shrikhand";
 }
 
-h2, p, a, li {
+h2, p, a, li, div {
   font-family: "Roboto";
 }
 
