--- a/css/base.scss
+++ b/css/base.scss
@@ -4,6 +4,13 @@
     box-sizing: border-box;
 }
 
+
+/****BODY****/
+
+body{
+    width: 100%;
+    height: 100%;
+}
 /****FONTS****/
 
 @font-face {
