--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,12 @@ a {
   box-sizing: border-box;
 }
 
+/****BODY****/
+body {
+  width: 100%;
+  height: 100%;
+}
+
 /****FONTS****/
 @font-face {
   font-family: "Roboto";
@@ -82,6 +88,7 @@ a {
   margin: 10px 0;
   box-shadow: 0 3px 10px -2px rgb(50, 60, 55);
   cursor: pointer;
+  transition: all 0.2 ease-in-out;
 }
 .btn__order {
   position: absolute;
@@ -100,13 +107,18 @@ a {
   position: absolute;
   top: 17px;
   bottom: 0;
-  left: 20px;
+  left: 25px;
+  color: grey;
 }
 .btn__text {
   position: absolute;
-  top: 15px;
-  left: 40px;
+  top: 17px;
+  left: 55px;
   font-size: 15px;
+}
+
+.btn :hover {
+  background-color: aqua;
 }
 
 .card {
@@ -359,6 +371,19 @@ h2, p, a, li, div {
   font-family: "Roboto";
 }
 
+h2 {
+  font-size: 20px;
+  font-weight: 800;
+}
+
+.presentation__title {
+  font-family: "Roboto";
+  font-size: 23px;
+  width: 70%;
+  margin: auto;
+  font-weight: bolder;
+}
+
 /****PADDINGS MARGINS****/
 section {
   padding: 0 5%;
@@ -401,11 +426,14 @@ section {
 .presentation {
   text-align: center;
   width: 100%;
-  height: 150px;
+  height: 200px;
   background: -webkit-gradient(linear, left top, left bottom, from(white), to(#f6f6f6));
 }
+.presentation p {
+  margin-top: 10px;
+}
 .presentation__link, .order__link {
-  margin: 10px auto;
+  margin: 20px auto;
   width: 220px;
   height: 50px;
   -webkit-text-fill-color: white;
@@ -430,6 +458,7 @@ footer {
   height: 150px;
   padding-left: 5%;
   margin-top: 40px;
+  bottom: 0;
 }
 footer img {
   width: 90px;
@@ -447,6 +476,11 @@ footer a i {
 }
 
 /****RESTAURANTS****/
+#restaurants {
+  background-color: #f6f6f6;
+  padding-top: 20px;
+}
+
 .header__restaurant {
   width: 100%;
   height: 60px;
