--- a/css/components.scss
+++ b/css/components.scss
@@ -41,9 +41,13 @@
 
 }
 
-.btn :hover{
-    background-color: aqua;
+.btn:hover{
+    background-color: $lighten;
+    transform: scale(101%);
 }
+
+
+
 
 
 .card{
@@ -51,6 +55,7 @@
     border-radius: 25px;
     position: relative;
     margin: 20px 0;
+    transition: transform 0.2s ease-in-out;
 
     &__flag{
         position: absolute;
@@ -99,6 +104,10 @@
         height: 50px;
     }
 
+}
+
+.card:hover{
+    transform: scale(101%);
 }
 
 
@@ -227,7 +236,7 @@ input:checked ~ .fa-regular {
 
 .dishe{
     width: 350px;
-    height: 50px;
+    height: 60px;
     border-radius: 10px;
     display: flex;
     overflow: hidden;
@@ -282,7 +291,7 @@ input:checked ~ .fa-regular {
     display: flex;
     align-items: flex-end;
     margin-bottom: 5px;
-    margin-right: 5px;
+    margin-right: 8px;
     margin-left: 5px;
     max-width: 100%;
 }
@@ -301,6 +310,7 @@ input:checked ~ .fa-regular {
     text-overflow: ellipsis;
     overflow: hidden;
     max-width: 100%;
+    padding-bottom: 2px;
   }
 
 
