--- a/css/pages.scss
+++ b/css/pages.scss
@@ -71,9 +71,10 @@
     }
 
     h2{
-        font-size: 14px;
+        font-size: 16px;
         margin-top: 20px;
         margin-bottom: 20px;
+        font-weight: 500;
     }
 
     .button{
@@ -118,6 +119,13 @@
 }
 
 @media screen and (min-width:900px) {
+
+    body{
+        margin: 0;
+        min-height: 100vh;
+        @include flexcolumn;
+        justify-content: space-between;
+    }
     
     .img__landing{
         width:100%;
@@ -125,6 +133,28 @@
         position:fixed;
         z-index: -10000;
         top: 0;
+    }
+
+    .btn{
+        margin-left:  20px;
+    }
+
+    #restaurants{
+
+        h2{
+            width: 100%;
+        }
+
+        height: auto;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .card{
+        width: 400px;
+        height: 230px;
+        
     }
 
     .menu__restaurant{
