--- a/css/style.css
+++ b/css/style.css
@@ -62,12 +62,6 @@ a {
   box-sizing: border-box;
 }
 
-/****BODY****/
-body {
-  width: 100%;
-  height: 100%;
-}
-
 /****FONTS****/
 @font-face {
   font-family: "Roboto";
@@ -117,8 +111,9 @@ body {
   font-size: 15px;
 }
 
-.btn :hover {
-  background-color: aqua;
+.btn:hover {
+  background-color: #ffdff6;
+  transform: scale(101%);
 }
 
 .card {
@@ -126,6 +121,7 @@ body {
   border-radius: 25px;
   position: relative;
   margin: 20px 0;
+  transition: transform 0.2s ease-in-out;
 }
 .card__flag {
   position: absolute;
@@ -165,6 +161,10 @@ body {
 }
 .card figcaption {
   height: 50px;
+}
+
+.card:hover {
+  transform: scale(101%);
 }
 
 /****COEUR****/
@@ -288,7 +288,7 @@ input:checked ~ .fas {
 /****BOUTON DES PLATS****/
 .dishe {
   width: 350px;
-  height: 50px;
+  height: 60px;
   border-radius: 10px;
   display: flex;
   overflow: hidden;
@@ -341,7 +341,7 @@ input:checked ~ .fas {
   display: flex;
   align-items: flex-end;
   margin-bottom: 5px;
-  margin-right: 5px;
+  margin-right: 8px;
   margin-left: 5px;
   max-width: 100%;
 }
@@ -360,6 +360,7 @@ input:checked ~ .fas {
   text-overflow: ellipsis;
   overflow: hidden;
   max-width: 100%;
+  padding-bottom: 2px;
 }
 
 /****FONTS****/
@@ -535,9 +536,10 @@ footer a i {
   font-size: 21px;
 }
 .menu__restaurant h2 {
-  font-size: 14px;
+  font-size: 16px;
   margin-top: 20px;
   margin-bottom: 20px;
+  font-weight: 500;
 }
 .menu__restaurant .button {
   opacity: 1;
@@ -601,12 +603,35 @@ footer a i {
 }
 
 @media screen and (min-width: 900px) {
+  body {
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
   .img__landing {
     width: 100%;
     height: 100%;
     position: fixed;
     z-index: -10000;
     top: 0;
+  }
+  .btn {
+    margin-left: 20px;
+  }
+  #restaurants {
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  #restaurants h2 {
+    width: 100%;
+  }
+  .card {
+    width: 400px;
+    height: 230px;
   }
   .menu__restaurant {
     width: 90%;
