--- a/css/components.scss
+++ b/css/components.scss
@@ -9,7 +9,7 @@
     margin: 10px 0;
     @include boxShadow;
     cursor: pointer;
-    transition: all 0.2 ease-in-out;
+    transition: all 0.2s ease-in-out;
 
     
     &__order{
@@ -43,7 +43,11 @@
 
 .btn:hover{
     background-color: $lighten;
-    transform: scale(101%);
+    transform: scale(1.1);
+
+    i{
+        color: map-get($map: $colors, $key: color-one);
+    }
 }
 
 
@@ -107,7 +111,7 @@
 }
 
 .card:hover{
-    transform: scale(101%);
+    transform: scale(1.1);
 }
 
 
@@ -301,7 +305,7 @@ input:checked ~ .fa-regular {
     padding: 5px;
     border-radius: 50%;
     background: white;
-    transform: rotate(-180deg);
+    transform: rotate(-300deg);
     transition: transform 0.5s;
 }
 
