--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,7 @@ td, th {
 
 a {
   text-decoration: none;
-}
-
-/*  1-Variables
+} /*  1-Variables
     2-Fonctions
     3-Mixins
     4-Placeholders
@@ -80,9 +78,9 @@ a {
   position: relative;
   border: none;
   margin: 10px 0;
-  box-shadow: 0 3px 10px -2px rgb(50, 60, 55);
+  box-shadow: 0 2px 10px -2px rgb(216, 213, 213);
   cursor: pointer;
-  transition: all 0.2 ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 .btn__order {
   position: absolute;
@@ -112,12 +110,15 @@ a {
 }
 
 .btn:hover {
-  background-color: #ffdff6;
-  transform: scale(101%);
+  background-color: #f7f2fc;
+  transform: scale(1.1);
+}
+.btn:hover i {
+  color: #9356DC;
 }
 
 .card {
-  box-shadow: 0 3px 10px -2px rgb(50, 60, 55);
+  box-shadow: 0 2px 10px -2px rgb(216, 213, 213);
   border-radius: 25px;
   position: relative;
   margin: 20px 0;
@@ -164,7 +165,7 @@ a {
 }
 
 .card:hover {
-  transform: scale(101%);
+  transform: scale(1.1);
 }
 
 /****COEUR****/
@@ -301,7 +302,7 @@ input:checked ~ .fas {
   padding: initial;
   writing-mode: unset;
   margin: 10px 0;
-  box-shadow: 0 3px 10px -2px rgb(50, 60, 55);
+  box-shadow: 0 2px 10px -2px rgb(216, 213, 213);
   background-color: white;
 }
 .dishe__description {
@@ -351,7 +352,7 @@ input:checked ~ .fas {
   padding: 5px;
   border-radius: 50%;
   background: white;
-  transform: rotate(-180deg);
+  transform: rotate(-300deg);
   transition: transform 0.5s;
 }
 
@@ -444,7 +445,21 @@ section {
   justify-content: center;
   align-items: center;
 }
+.presentation__link:hover, .order__link:hover {
+  animation-name: zebesthover;
+  animation-duration: 0.4s;
+  animation-timing-function: cubic-bezier(0, 0.96, 1, 0.67);
+  animation-fill-mode: both;
+}
 
+@keyframes zebesthover {
+  from {
+    background: -webkit-gradient(linear, left top, left bottom, from(#FF79DA), to(#9356DC));
+  }
+  to {
+    background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+  }
+}
 .navbar {
   display: flex;
   justify-content: space-around;
